--- a/index.html
+++ b/index.html
@@ -352,6 +352,32 @@
             <div></div>
 
         </div>
+
+        <div>
+
+            <br>
+            <br>
+            <hr>
+            <br>
+            <a href="https://newmapsplus.github.io">
+                <img src="https://newmapsplus.github.io/assets/graphics/logo-2018-nmp-75px-h-gray.png"
+                    alt="University of Kentucky Geography">
+            </a>
+
+            <a href="https://uky-gis.github.io">
+                <img src="https://newmapsplus.github.io/assets/graphics/logo-2018-geography-75px-h.png"
+                    alt="University of Kentucky Geography">
+            </a>
+        </div>
+
+        <div id="social">
+            <p><b>Social links</b></p>
+            <ul>
+                <li>GitHub: <a href="https://github.com/newmapsplus">New Maps Plus</a></li>
+                <li>Twitter: <a href="https://twitter.com/NewMapsPlus">@NewMapsPlus</a></li>
+                <li>Portfolio: <a href='#'>mapping portfolio</a>.</li>
+            </ul>
+        </div>
     </footer>
 
 
